# VoiceDetector

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  voice.py
.github/workflows/: docker-compose.yml
alembic/: env.py
alembic/versions/: d921df2bd2a8_initial_migration.py  fea9a8b1c201_add_vocal_data_column.py
app/core/: config.py  database.py  security.py
app/end_points/: routes.py
app/models/: models.py
app/repositories/: user_repository.py
app/schema/: shema.py
app/services/: user_service.py
