[tool.poetry]
name = "voicedetector"
version = "0.1.0"
description = ""
authors = ["ahmed <ahmed.dahdouh98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
