[tool.poetry]
name = "voicedetector"
version = "0.1.0"
description = ""
authors = ["ahmed <ahmed.dahdouh98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.2"}
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
databases = "^0.9.0"
asyncpg = "^0.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.12"
pyjwt = "^2.9.0"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
